--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
 # Ignore Python virtual environments
 venv/
 .venv/
-
 # Ignore PyCharm project files
 .idea/
 *.iml
-
 # Ignore Python bytecode files
 __pycache__/
 *.py[cod]
-
 # Ignore other typical Python and project-specific files
 .DS_Store
+# Ignore data files
+data/
